[tool.setuptools.packages.find]
where = ["."]
include = ["agent", "client_tool"]

[project]
name = "merchant_agent"
version = "0.1.0"
description = "A comprehensive agent framework designed for agentic commerce."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Fiuu", email = "test@email.com" }
]

license = {file = "LICENSE"} 

dependencies = [
    "google-adk>=0.1.0",
    "a2a-sdk>=0.1.0",
    "google-genai>=0.1.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"